--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import-normalsize;
+@import 'helper';
 *{
   margin: 0;
   padding: 0;
@@ -12,3 +13,8 @@
 a{
   text-decoration: none;
   color: inherit;}
+body{
+  font-family: $font-hei;
+  font-size: 16px;
+  line-height: 1.2;
+}
