--- a/src/index.scss
+++ b/src/index.scss
@@ -23,8 +23,9 @@ body{
   width: 1em;
   height: 1em;
 }
-button{
+button,input{
   font-family: inherit;
+  font-size: inherit;
 }
 :focus{
   outline: none;
