--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,8 @@ body{
   font-family: $font-hei;
   font-size: 16px;
   line-height: 1.2;
-  background: #f5f5f5;
+  //#29daea;
+  background: #29daea;
 }
 .icon{
   width: 1em;
